--- a/.github/workflows/coffee-paste.yml
+++ b/.github/workflows/coffee-paste.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         npm install
         npm run build
-    - uses: actions/upload-artifact@v2
-      with:
-        name: bundle
-        path: dist
+    # - uses: actions/upload-artifact@v2
+    #   with:
+    #     name: bundle
+    #     path: dist
