Prettified tabs and toolbar. Updated .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 VUE_APP_API_URL="http://localhost:3000"
+# OR 
+VUE_APP_API_URL="https://dev-coffee-paste.herokuapp.com"
+
+VUE_APP_LOCAL_DEV="true"
 VUE_APP_GITLAB_CLIENT_ID=""
 VUE_APP_GITHUB_CLIENT_ID=""
 VUE_APP_GOOGLE_CLIENT_ID=""
