--- a/.github/workflows/coffee-paste.yml
+++ b/.github/workflows/coffee-paste.yml
@@ -17,6 +17,7 @@ jobs:
     - name: Build
       run: |
         npm install
+        npm run prepare
         npm run build
     # - uses: actions/upload-artifact@v2
     #   with:
