--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "primeicons": "^4.1.0",
     "primevue": "^3.3.5",
     "quill": "^1.3.7",
+    "unitsnet-js": "^1.0.20",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0"
