--- a/.github/workflows/coffee-paste.yml
+++ b/.github/workflows/coffee-paste.yml
@@ -18,6 +18,7 @@ jobs:
       run: |
         npm install
         npm run prepare
+        npm run lint
         npm run build
     # - uses: actions/upload-artifact@v2
     #   with:
