--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "prepare": "node scripts/generate-api.js"
   },
   "dependencies": {
+    "@types/lodash.debounce": "^4.0.6",
     "base64-js": "^1.5.1",
     "core-js": "^3.6.5",
+    "lodash.debounce": "^4.0.8",
     "primeicons": "^4.1.0",
     "primevue": "^3.3.5",
     "quill": "^1.3.7",
