--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "primeicons": "^4.1.0",
     "primevue": "^3.3.5",
     "quill": "^1.3.7",
+    "sass": "^1.38.2",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0"
@@ -53,7 +54,6 @@
     "eslint-plugin-vue": "^7.12.1",
     "jszip": "^3.6.0",
     "node-fetch": "^2.6.1",
-    "node-sass": "^4.12.0",
     "prettier": "^2.3.2",
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5"
