--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "primevue": "^3.3.5",
     "quill": "^1.3.7",
     "sass": "^1.38.2",
+    "ts-events": "file:../ts-events",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0"
@@ -28,8 +29,8 @@
     "@types/chai": "^4.2.11",
     "@types/lodash.debounce": "^4.0.6",
     "@types/mocha": "^5.2.4",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
@@ -56,6 +57,6 @@
     "node-fetch": "^2.6.1",
     "prettier": "^2.3.2",
     "sass-loader": "^8.0.2",
-    "typescript": "~4.1.5"
+    "typescript": "^4.4.2"
   }
 }
