--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "primevue": "^3.3.5",
     "quill": "^1.3.7",
     "sass": "^1.38.2",
-    "ts-events": "file:../ts-events",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "weak-event": "^1.0.3"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
