--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ VUE_APP_LOCAL_DEV="true"
 VUE_APP_GITLAB_CLIENT_ID=""
 VUE_APP_GITHUB_CLIENT_ID=""
 VUE_APP_GOOGLE_CLIENT_ID=""
+
+# The branch from which to build the OpenAPI client stubs
+BACKEND_BRANCH="my-branch"
