--- a/.github/workflows/coffee-paste.yml
+++ b/.github/workflows/coffee-paste.yml
@@ -16,9 +16,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Build
       run: |
-        npm install
-        npm run prepare
-        npm run build
+        npm i -g yarn
+        yarn install --frozen-lockfile
+        yarn prepare
+        yarn build
     # - uses: actions/upload-artifact@v2
     #   with:
     #     name: bundle
