--- a/.github/workflows/coffee-paste.yml
+++ b/.github/workflows/coffee-paste.yml
@@ -16,7 +16,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Build
       run: |
-        npm install
+        npm ci
         npm run prepare
         npm run build
     # - uses: actions/upload-artifact@v2
