--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coffee-paste-front",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.1.1",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
